crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-body-head.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|h1 |h2
|group |values
|k1 |v1
|k2 |v2
|===
