crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.First caption paragraph +
Second caption paragraph
[cols="",options="header",]
|===
|h
|v
|===
