crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.A caption for the table
[cols="",options="header",]
|===
|h
|v
|===
