crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|left |right
|x |
| |y
|===
