crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|h1 |h2
|a1 |a2
|b1 |b2
|===
