crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",]
|===
.2+|tall |a
|b
|===
