crates/carta/tests/snapshots/golden_writer__asciidoc_legacy__table__table-wide-unicode.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|項目 |値
|名前 |漢字テキスト
|x |y
|===
